# rin-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.node.yml  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: deps.py  routes.py  websocket.py
app/api/schemas/: metrics.py
app/core/: docker_stats.py  metrics.py
app/monitoring/: metrics_collector.py  metrics_repository.py  node_client.py  retention.py  server_registry.py
app/schemas/: schemas.py
database/: database.py  models.py  repositories.py
docs/api/: index.html  openapi.yaml
docs/architecture/: container-diagram.md  system-context.md
docs/deploy/: DEPLOY.md
migrations/: env.py
migrations/versions/: 1c7f9e32e3a4_initial_schema.py
