[project]
name = "rin-watchdog-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiodocker>=0.26.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "docker>=7.1.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.27.0",
    "psutil>=7.2.2",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.0",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.46.0",
    "websockets>=16.0",
]
